--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.7",
     "axios": "^1.6.7",
     "firebase": "^10.8.0",
+    "mdbreact": "^5.2.0",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.6.2",
     "react-date-picker": "^10.6.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
-    "react-toastify": "^10.0.4"
+    "react-table": "^7.8.0",
+    "react-toastify": "^10.0.4",
+    "uid": "^2.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
